--- a/wiki/de/BIM_Material.html
+++ b/wiki/de/BIM_Material.html
@@ -195,7 +195,7 @@ Diese Problemumgehung birgt ein erhebliches Risiko der <b>Datendesynchronisation
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Layers.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/BIM_Layers.html" title="BIM Layers/de">Ebenen</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arch_Schedule.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/de&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/de (page does not exist)">Bericht</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Report.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../index.php?title=BIM_Report/de&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/de (page does not exist)">Bericht</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/BIM_Workbench.html" title="BIM Workbench/de">BIM</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_BIM.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -242,15 +242,15 @@ Diese Problemumgehung birgt ein erhebliches Risiko der <b>Datendesynchronisation
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115171618
+Cached time: 20260115171627
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.203 seconds
+CPU time usage: 0.113 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 1172/1000000
-Post&#8208;expand include size: 34524/2097152 bytes
-Template argument size: 11024/2097152 bytes
+Post&#8208;expand include size: 34515/2097152 bytes
+Template argument size: 11018/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -258,19 +258,19 @@ Unstrip post&#8208;expand size: 1310/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.847      1 -total
- 24.43%   12.178     14 Template:PropertyData/de
- 18.05%    8.998      1 Template:BIM_Tools_navi/de
- 16.64%    8.296     19 Template:Variable
- 10.68%    5.322      1 Template:GuiCommand/de
-  9.62%    4.797      2 Template:Navigation_menu_2
-  7.37%    3.675      6 Template:FileName
-  7.02%    3.498      5 Template:PropertyData
-  6.34%    3.162      2 Template:Docnav/de
-  5.41%    2.695      1 Template:Userdocnavi/de
+100.00%   39.842      1 -total
+ 31.91%   12.714      1 Template:BIM_Tools_navi/de
+ 16.69%    6.649     14 Template:PropertyData/de
+ 16.10%    6.414      2 Template:Navigation_menu_2
+ 13.99%    5.572     19 Template:Variable
+  7.67%    3.057      5 Template:PropertyData
+  6.41%    2.553      2 Template:Docnav/de
+  5.93%    2.363      1 Template:Userdocnavi/de
+  5.24%    2.087      1 Template:MenuCommand
+  4.94%    1.970      1 Template:GuiCommand/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353314-0!canonical and timestamp 20260115171617 and revision id 1738904. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:353314-0!canonical and timestamp 20260115171627 and revision id 1738906. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
