--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -3,7 +3,7 @@
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM: Warstwy (50% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--complete" title="BIM: Warstwy (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Classification.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/BIM_Classification.html" title="BIM Classification/de">Klassifizierung</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/BIM_Material.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/BIM_Material.html" title="BIM Material/de">Material</a>
@@ -21,7 +21,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">Manage &rarr; Manage layers...
+<td class="ctEven">Verwalten &rarr; Ebenen verwalten
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -138,34 +138,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115101501
+Cached time: 20260115171808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.098 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 394/1000000
-Post&#8208;expand include size: 26015/2097152 bytes
-Template argument size: 9766/2097152 bytes
+Post&#8208;expand include size: 26021/2097152 bytes
+Template argument size: 9772/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1111/5000000 bytes
+Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.154      1 -total
- 41.83%    7.176      1 Template:BIM_Tools_navi/de
- 28.20%    4.838      2 Template:Navigation_menu_2
- 12.37%    2.122      1 Template:GuiCommand/de
- 12.18%    2.090      2 Template:Docnav/de
- 11.57%    1.985      1 Template:Userdocnavi/de
-  7.60%    1.303      1 Template:Caption
-  5.69%    0.977      2 Template:Button
-  5.35%    0.917      1 Template:MenuCommand
+100.00%   25.079      1 -total
+ 35.30%    8.853      1 Template:BIM_Tools_navi/de
+ 18.53%    4.648      2 Template:Navigation_menu_2
+ 15.40%    3.861      2 Template:Docnav/de
+ 15.26%    3.826      1 Template:GuiCommand/de
+ 11.72%    2.938      1 Template:Caption
+  7.69%    1.929      1 Template:Userdocnavi/de
+  7.19%    1.804      1 Template:MenuCommand
+  4.99%    1.252      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115101501 and revision id 1738622. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171808 and revision id 1738910. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
