--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -43,7 +43,7 @@
 </p>
 <h3><span class="mw-headline" id="Actual">Actual</span></h3>
 <p>Os bancos de traballo que se listan a continuaci&oacute;n incl&uacute;ense con cada instalaci&oacute;n de FreeCAD.
-</p><p><a href="../index.php?title=Template;Versi%C3%B3n&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Versi&oacute;n (page does not exist)">Template:Versi&oacute;n</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados por debaixo con: <code>D</code>. P&oacute;dese activar un banco de traballo desactivado nas preferencias <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do selector <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+</p><p><a href="../index.php?title=Template;Versi%C3%B3n&amp;action=edit&amp;redlink=1.html" class="new" title="Template:Versi&oacute;n (page does not exist)">Template:Versi&oacute;n</a>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados por debaixo con: <code>D</code>. P&oacute;dese activar un banco de traballo desactivado nas preferencias <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -90,12 +90,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115171753
+Cached time: 20260115171858
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.185 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.175 seconds
 Preprocessor visited node count: 216/1000000
 Post&#8208;expand include size: 2250/2097152 bytes
 Template argument size: 408/2097152 bytes
@@ -106,18 +106,18 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.475      1 -total
- 23.38%    3.384      2 Template:Docnav
- 18.33%    2.653      5 Template:Incode
- 12.70%    1.839      2 Template:VersionMinus
- 12.27%    1.776      1 Template:MenuCommand
- 10.00%    1.447      2 Template:Version
-  6.71%    0.971      1 Template:Button
-  5.95%    0.862      1 Template:Userdocnavi/gl
-  4.64%    0.672      1 Template:Versi&oacute;n
+100.00%   10.818      1 -total
+ 18.63%    2.015      2 Template:Docnav
+ 14.24%    1.540      2 Template:Version
+ 12.69%    1.373      5 Template:Incode
+ 12.26%    1.326      1 Template:Button
+ 11.39%    1.232      2 Template:VersionMinus
+  9.81%    1.061      1 Template:MenuCommand
+  6.85%    0.741      1 Template:Userdocnavi/gl
+  5.52%    0.597      1 Template:Versi&oacute;n
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171753 and revision id 1738908. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171858 and revision id 1738912. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
