--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -53,11 +53,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Der <b>Layers Manager</b> erm&ouml;glicht <a href="../de/Draft_Layer.html" title="Draft Layer/de">Ebenen</a> (layer) zu verwalten. Ebenen sind eine spezielle Art von Gruppe (wie fr&uuml;her Transparentfolien, die zu einer Gesamtzeichnung &uuml;bereinander gelegt wurden), die die visuellen Eigenschaften der auf ihnen platzierten Objekte steuern. Werden die Eigenschaften der Ebenen ge&auml;ndert, wie z. B. Linienbreite, Linienfarbe, Formfarbe und Transparenz, werden die &Auml;nderungen auf ihre untergeordneten Objekte &uuml;bertragen. Ebenen greifen nicht in andere FreeCAD-Strukturen wie <a href="../de/Std_Group.html" title="Std Group/de">Gruppen</a> oder <a href="../de/Arch_BuildingPart.html" title="Arch BuildingPart/de">Geb&auml;udeteile</a> ein, so dass jedes Objekt gleichzeitig Teil einer Ebene und Teil einer Gruppe sein kann.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
+<p>Die <b>Ebenenverwaltung</b> erm&ouml;glicht <a href="../de/Draft_Layer.html" title="Draft Layer/de">Ebenen</a> zu verwalten. Ebenen sind eine spezielle Art von Gruppe (wie fr&uuml;her Transparentfolien, die zu einer Gesamtzeichnung &uuml;bereinander gelegt wurden), die die visuellen Eigenschaften der auf ihnen platzierten Objekte steuern. Werden die Eigenschaften der Ebenen ge&auml;ndert, wie z. B. Linienbreite, Linienfarbe, Formfarbe und Transparenz, werden die &Auml;nderungen auf ihre untergeordneten Objekte &uuml;bertragen. Ebenen greifen nicht in andere FreeCAD-Strukturen wie <a href="../de/Std_Group.html" title="Std Group/de">Gruppen</a> oder <a href="../de/Arch_BuildingPart.html" title="Arch BuildingPart/de">Geb&auml;udeteile</a> ein, so dass jedes Objekt gleichzeitig Teil einer Ebene und Teil einer Gruppe sein kann.
+</p><p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Layers-Manager</p>
 <p>Ebenen werden von/nach <a href="../de/Arch_IFC.html" title="Arch IFC/de">IFC</a> und <a href="../de/Draft_DXF.html" title="Draft DXF/de">DXF/DWG</a> importiert und exportiert.
@@ -138,13 +135,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115171808
+Cached time: 20260115171929
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.122 seconds
-Preprocessor visited node count: 394/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.211 seconds
+Preprocessor visited node count: 393/1000000
 Post&#8208;expand include size: 26021/2097152 bytes
 Template argument size: 9772/2097152 bytes
 Highest expansion depth: 6/100
@@ -154,18 +151,18 @@ Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.079      1 -total
- 35.30%    8.853      1 Template:BIM_Tools_navi/de
- 18.53%    4.648      2 Template:Navigation_menu_2
- 15.40%    3.861      2 Template:Docnav/de
- 15.26%    3.826      1 Template:GuiCommand/de
- 11.72%    2.938      1 Template:Caption
-  7.69%    1.929      1 Template:Userdocnavi/de
-  7.19%    1.804      1 Template:MenuCommand
-  4.99%    1.252      2 Template:Button
+100.00%   64.767      1 -total
+ 47.33%   30.655      1 Template:BIM_Tools_navi/de
+ 27.23%   17.633      2 Template:Navigation_menu_2
+ 16.63%   10.771      1 Template:Userdocnavi/de
+ 14.55%    9.422      2 Template:Docnav/de
+  7.90%    5.115      1 Template:GuiCommand/de
+  4.63%    2.998      2 Template:Button
+  4.12%    2.667      1 Template:Caption
+  2.96%    1.916      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171808 and revision id 1738910. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171929 and revision id 1738914. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
