--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -62,7 +62,7 @@
 </p><p><span id="NativeIFC"></span>
 </p>
 <h2><span class="mw-headline" id="Natives_IFC">Natives IFC</span></h2>
-<p>Dieses Werkzeug ist exakt das Gleiche wie das  <a href="../de/Draft_LayerManager.html" title="Draft LayerManager/de">Draft EbenenManager</a>-Werkzeug, und erzeugt das gleiche Layer-Objekt. Es gibt nur einen Unterschied: Es unterst&uuml;tzt das <a href="../index.php?title=NativeIFC/de&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/de (page does not exist)">Native IFC</a>-Objekt:
+<p>Dieses Werkzeug ist exakt das Gleiche wie das Werkzeug <a href="../de/Draft_LayerManager.html" title="Draft LayerManager/de">Draft EbenenManager</a>, und erzeugt das gleiche Ebenen-Objekt. Es gibt nur einen Unterschied: Es unterst&uuml;tzt das <a href="../index.php?title=NativeIFC/de&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/de (page does not exist)">NativeIFC</a>-Objekt:
 </p>
 <div class="mw-translate-fuzzy">
 <ul><li>Ein IFC-Icon zeigt an, ob der Layer Teil des IFC-Projekts ist oder nicht</li>
@@ -131,12 +131,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172026
+Cached time: 20260115172230
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.160 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.149 seconds
 Preprocessor visited node count: 392/1000000
 Post&#8208;expand include size: 26025/2097152 bytes
 Template argument size: 9774/2097152 bytes
@@ -147,18 +147,18 @@ Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.312      1 -total
- 32.98%    9.336      1 Template:BIM_Tools_navi/de
- 19.73%    5.585      2 Template:Navigation_menu_2
- 18.22%    5.159      1 Template:GuiCommand/de
- 13.68%    3.873      2 Template:Docnav/de
- 11.10%    3.142      1 Template:Caption
-  8.40%    2.377      1 Template:Userdocnavi/de
-  6.80%    1.924      1 Template:MenuCommand
-  6.09%    1.725      2 Template:Button
+100.00%   23.089      1 -total
+ 40.50%    9.352      1 Template:BIM_Tools_navi/de
+ 23.93%    5.524      2 Template:Navigation_menu_2
+ 11.98%    2.767      2 Template:Docnav/de
+ 11.62%    2.682      1 Template:Userdocnavi/de
+ 11.49%    2.653      1 Template:GuiCommand/de
+  9.84%    2.273      1 Template:Caption
+  6.85%    1.582      2 Template:Button
+  4.79%    1.106      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172026 and revision id 1738918. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172230 and revision id 1738926. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
