--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -64,10 +64,8 @@
 <h2><span class="mw-headline" id="Natives_IFC">Natives IFC</span></h2>
 <p>Dieses Werkzeug ist exakt das Gleiche wie das Werkzeug <a href="../de/Draft_LayerManager.html" title="Draft LayerManager/de">Draft EbenenManager</a>, und erzeugt das gleiche Ebenen-Objekt. Es gibt nur einen Unterschied: Es unterst&uuml;tzt das <a href="../index.php?title=NativeIFC/de&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/de (page does not exist)">NativeIFC</a>-Objekt:
 </p>
-<div class="mw-translate-fuzzy">
-<ul><li>Ein IFC-Icon zeigt an, ob der Layer Teil des IFC-Projekts ist oder nicht</li>
-<li>Ein Knopf <b>IFC-Zuweisen</b> erlaubt die Verschiebung eines Layers zu einem IFC-Projekt und damit wird er zu einem IFC-Layer</li></ul>
-</div>
+<ul><li>Ein IFC-Symbol zeigt an, ob die Ebene Teil des IFC-Projekts ist oder nicht.</li>
+<li>Eine Schaltfl&auml;che <b>IFC-Zuweisen</b> erlaubt die Verschiebung einer Ebene zu einem IFC-Projekt und damit wird sie zu einer IFC-Ebene.</li></ul>
 <p>Implementation of <a href="../NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
@@ -131,13 +129,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172230
+Cached time: 20260115172327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
+CPU time usage: 0.103 seconds
 Real time usage: 0.149 seconds
-Preprocessor visited node count: 392/1000000
+Preprocessor visited node count: 391/1000000
 Post&#8208;expand include size: 26025/2097152 bytes
 Template argument size: 9774/2097152 bytes
 Highest expansion depth: 6/100
@@ -147,18 +145,18 @@ Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.089      1 -total
- 40.50%    9.352      1 Template:BIM_Tools_navi/de
- 23.93%    5.524      2 Template:Navigation_menu_2
- 11.98%    2.767      2 Template:Docnav/de
- 11.62%    2.682      1 Template:Userdocnavi/de
- 11.49%    2.653      1 Template:GuiCommand/de
-  9.84%    2.273      1 Template:Caption
-  6.85%    1.582      2 Template:Button
-  4.79%    1.106      1 Template:MenuCommand
+100.00%   25.698      1 -total
+ 48.32%   12.417      1 Template:BIM_Tools_navi/de
+ 25.75%    6.618      2 Template:Navigation_menu_2
+ 12.40%    3.187      1 Template:GuiCommand/de
+ 11.23%    2.886      2 Template:Docnav/de
+ 10.72%    2.754      1 Template:Userdocnavi/de
+  5.99%    1.540      1 Template:Caption
+  4.34%    1.115      1 Template:MenuCommand
+  4.27%    1.097      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172230 and revision id 1738926. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172327 and revision id 1738933. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
