--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -66,7 +66,7 @@
 </p>
 <ul><li>Ein IFC-Symbol zeigt an, ob die Ebene Teil des IFC-Projekts ist oder nicht.</li>
 <li>Eine Schaltfl&auml;che <b>IFC-Zuweisen</b> erlaubt die Verschiebung einer Ebene zu einem IFC-Projekt und damit wird sie zu einer IFC-Ebene.</li></ul>
-<p>Implementation of <a href="../NativeIFC.html" class="mw-redirect" title="NativeIFC">NativeIFC</a> is a work in progress. Users can read <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yorik's blog</a> for updates from a lead developer of NativeIFC functionality in FreeCAD.
+<p>Die Implementierung von <a href="../de/Native_IFC.html" title="Native IFC/de">NativeIFC</a> ist noch in Arbeit. Benutzer k&ouml;nnen <a rel="nofollow" class="external text" href="https://yorik.uncreated.net/?blog%2Ffreecad">Yoriks Blog</a> lesen, um Aktualisierungen von einem leitenden Entwickler der NativeIFC-Funktionalit&auml;t in FreeCAD zu erhalten.
 </p>
 <h2><span class="mw-headline" id="Usage">Usage</span></h2>
 <ol><li>There are several ways to invoke the tool:
@@ -129,34 +129,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172327
+Cached time: 20260115172459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.149 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.128 seconds
 Preprocessor visited node count: 391/1000000
 Post&#8208;expand include size: 26025/2097152 bytes
 Template argument size: 9774/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1117/5000000 bytes
+Unstrip post&#8208;expand size: 1118/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.698      1 -total
- 48.32%   12.417      1 Template:BIM_Tools_navi/de
- 25.75%    6.618      2 Template:Navigation_menu_2
- 12.40%    3.187      1 Template:GuiCommand/de
- 11.23%    2.886      2 Template:Docnav/de
- 10.72%    2.754      1 Template:Userdocnavi/de
-  5.99%    1.540      1 Template:Caption
-  4.34%    1.115      1 Template:MenuCommand
-  4.27%    1.097      2 Template:Button
+100.00%   26.736      1 -total
+ 43.72%   11.688      1 Template:BIM_Tools_navi/de
+ 20.97%    5.606      2 Template:Navigation_menu_2
+ 15.87%    4.242      1 Template:GuiCommand/de
+ 13.40%    3.584      2 Template:Docnav/de
+  8.84%    2.364      1 Template:Userdocnavi/de
+  7.24%    1.937      1 Template:Caption
+  4.35%    1.163      2 Template:Button
+  4.31%    1.153      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172327 and revision id 1738933. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172458 and revision id 1738939. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
